autostatus z pliku + wydzielenie status.h/cpp
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@312 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -27,7 +27,8 @@ userinfo.cpp userinfo.h \
 userlist.cpp userlist.h \
 vuser.cpp vuser.h \
 dock_widget.cpp dock_widget.h \
-emoticons.cpp emoticons.h
+emoticons.cpp emoticons.h \
+status.cpp status.h
 
 METASOURCES = AUTO
 
