--- a/libgadu/configure.in
+++ b/libgadu/configure.in
@@ -1,16 +1,14 @@
-dnl $Id: configure.in,v 1.7 2002/11/14 17:13:15 chilek Exp $
+dnl $Id: configure.in,v 1.8 2002/11/19 00:58:48 chilek Exp $
 
 AC_INIT(lib/libgadu.h)
 AC_PREREQ(2.50)
 AC_CONFIG_HEADER(config.h)
-
 
 AC_PROG_CC
 AC_PROG_CPP
 AC_PROG_INSTALL
 AC_PROG_RANLIB
 AC_PROG_LN_S
-
 
 AC_PATH_PROG(GMAKE, gmake, no)
 if test "x$GMAKE" = "xno"; then
@@ -79,14 +77,7 @@ dnl sparc libs...
 AC_CHECK_LIB(nsl, t_accept, LIBS="$LIBS -lnsl")
 AC_CHECK_LIB(socket, socket, LIBS="$LIBS -lsocket")
 
-dnl basename - get rid of libgen
-AC_CHECK_HEADERS(libgen.h)
-AC_CHECK_FUNC(dirname, , [OBJS="$OBJS ../compat/dirname.o"])
-
-# zachowujemy opcje dla libgadu
-
-CFLAGS_LIBGADU="$CFLAGS_LIBGADU $CFLAGS"
-LIBS_LIBGADU="$LIBS_LIBGADU $LIBS"
+AC_CHECK_FUNCS([gethostbyname_r])
 
 # jak± wersjê libgadu kompilujemy?
 
@@ -132,214 +123,25 @@ AC_TRY_RUN(
   }], [AC_DEFINE(HAVE_C99_VSNPRINTF, 1, [define if you have C99-aware vsnprintf])
   AC_MSG_RESULT([yes])], [AC_MSG_RESULT([no])])
 
-# i zaczynamy wykrywaæ ¶mieci dla ekg
+AC_ARG_WITH(pthread,
+  [  --with-pthread          Use pthread in resolver])
 
-if test -d src; then
-
-  AC_ARG_ENABLE(ui-readline,
-    [  --enable-ui-readline    Enable readline UI])
-
-  AC_ARG_ENABLE(force-ncurses,
-    [  --disable-force-ncurses Force use of ncurses UI])
-
-  AC_ARG_ENABLE(ui-ncurses,
-    [  --disable-ui-ncurses    Disable ncurses UI])
-
-  if test "x$enable_ui_ncurses" != "xno"; then
-    AC_DEFINE(WITH_UI_NCURSES, 1, [define if you want ui-ncurses])
-    OBJS="$OBJS ui-ncurses.o"
-    ui_ncurses_enabled=yes
-    ui_ncurses_default=yes
-  fi
-
-  # je¶li nie chcemy ncurses, budujemy readline.
-  
-  if test "x$enable_ui_ncurses" = "xno" -a "x$enable_ui_readline" != "xno"; then
-    enable_ui_readline=yes
-  fi
-
-  if test "x$enable_ui_readline" = "xyes"; then
-    AC_DEFINE(WITH_UI_READLINE, 1, [define if you want ui-readline])
-    OBJS="$OBJS ui-readline.o"
-    ui_readline_enabled=yes
-    ui_ncurses_default=no
-    ui_readline_default=yes
-  fi
-  
-  if test "x$enable_ui_readline" = "xyes" -a "x$enable_force_ncurses" = "xyes"; then 
-    AC_DEFINE(WITH_FORCE_NCURSES, 1, [define if you want ui-ncurses as default])
-    ui_ncurses_default=yes
-    ui_readline_default=no
-  fi
-  
-  if test "x$enable_ui_ncurses" != "xno"; then 
-    AC_CHECK_NCURSES
-
-    if test "x$have_ncurses" = "x"; then
-      AC_MSG_ERROR([You need ncurses and ncurses-devel packages.])
-    fi
-
-    LDFLAGS="$LDFLAGS $CURSES_LIBS"
-    CFLAGS="$CFLAGS $CURSES_INCLUDES"
-  fi
-
-  AC_ARG_WITH(termcap, 
-    [  --without-termcap       Used to force ncurses for readline])
-
-  if test "x$enable_ui_readline" = "xyes"; then
-    if test "x$with_termcap" = "xno"; then
-      TERMCAP_LIB=""
-    else
-      AC_CHECK_LIB(termcap, tgetent, [TERMCAP_LIB="-ltermcap"])
-      LDFLAGS="$LDFLAGS $TERMCAP_LIB"
-    fi
-
-    if test "x$TERMCAP_LIB" = "x" -a "x$CURSES_LIBS" = "x"; then
-      AC_CHECK_NCURSES
-      LDFLAGS="$LDFLAGS $CURSES_LIBS"
-      CFLAGS="$CFLAGS $CURSES_INCLUDES"
-    fi
-      
-    AC_CHECK_READLINE
-
-    if test "x$READLINE_LIBS" = "x"; then
-      AC_MSG_ERROR([You need both readline and readline-devel packages.])
-    fi
-
-    LDFLAGS="$READLINE_LIBS $LDFLAGS"
-    CFLAGS="$CFLAGS $READLINE_INCLUDES"
-
-    AC_CHECK_FUNCS([rl_set_prompt rl_filename_completion_function rl_get_screen_size rl_set_key rl_bind_key_in_map])
-  fi
-
-  # sprawdzamy libgsm.so, <gsm.h> i <linux/soundcard.h>
-  
-  AC_ARG_WITH(libgsm,
-    [  --without-libgsm        Compile without GSM support])
-
-  if test "x$with_libgsm" != "xno"; then
-    AC_CHECK_LIB(gsm, gsm_decode, [ 
-      AC_CHECK_HEADERS(gsm.h, [
-        have_gsm_h=yes
-      ], [
-        AC_CHECK_HEADERS(gsm/gsm.h, [
-	  have_gsm_h=yes
-	  CFLAGS="$CFLAGS -I/usr/include/gsm"
-	])
-      ])
-      if test "x$have_gsm_h" = "xyes"; then
-        AC_CHECK_HEADERS(linux/soundcard.h, [
-          AC_DEFINE(HAVE_VOIP, 1, [define if you want VOIP support])
-	  LDFLAGS="-lgsm $LDFLAGS"
-	  OBJS="$OBJS voice.o"
-	])
-      fi
+if test "x$with_pthread" = "xyes"; then
+  AC_CHECK_HEADER(pthread.h, [
+    AC_CHECK_LIB(pthread, pthread_create, [
+      AC_DEFINE(HAVE_PTHREAD, 1, [Define if you want to use pthread in resolver])
+      LIBS="$LIBS -lpthread"
     ])
-  fi
-
-  # sprawdzamy pythona
-    
-  AC_CHECK_PYTHON
-  
-  if test "x$have_python" = "xtrue"; then
-    OBJS="$OBJS python.o"
-    LDFLAGS="$PYTHON_LIBS $LDFLAGS"
-    CFLAGS="$CFLAGS $PYTHON_INCLUDES"
-  fi
-
-  # sprawdzamy openssl
-
-  AC_CHECK_OPENSSL
-
-  if test "x$have_openssl" = "xtrue"; then
-    OBJS="$OBJS sim.o"
-    LDFLAGS="$OPENSSL_LIBS $LDFLAGS"
-    CFLAGS="$CFLAGS $OPENSSL_INCLUDES"
-  fi
-
-  # sprawdzamy libz.so, <zlib.h>
-  
-  AC_ARG_WITH(zlib,
-    [  --without-zlib          Compile without zlib (compressed logs)])
-
-  if test "x$with_zlib" != "xno"; then
-    AC_CHECK_LIB(z, gzopen, [
-      AC_CHECK_HEADERS(zlib.h, [
-        AC_DEFINE(HAVE_ZLIB, 1, [define if you want compressed logs])
-	LDFLAGS="-lz $LDFLAGS"
-      ])
-    ])
-  fi
-
-dnl   # sprawdzamy libbz2.so, <bzlib.h>
-dnl   
-dnl   AC_ARG_WITH(bzip2,
-dnl     [  --without-bzip2         Compile without bzip2 (compressed logs)])
-dnl 
-dnl   if test "x$with_bzip2" != "xno"; then
-dnl     AC_CHECK_LIB(bz2, BZ2_bzopen, [
-dnl       AC_CHECK_HEADERS(bzlib.h, [
-dnl         AC_DEFINE(HAVE_BZIP2)
-dnl         LIBS="$LIBS -lbz2"
-dnl       ])
-dnl     ])
-dnl   fi
-
-  # sprawdzamy, czy u¿ytkownik chce ekgwap
-
-  AC_ARG_ENABLE(wap,
-    [  --enable-wap            Compile WAP gateway])
-
-  if test "x$enable_wap" = "xyes"; then
-    make_ekgwap="make-ekgwap"
-    install_ekgwap="install-ekgwap"
-    AC_DEFINE(WITH_WAP, 1, [define if you want "WAP" support])
-  fi
-
-  # sprawdzamy, czy system ma getopt_long
-
-  AC_CHECK_FUNC(getopt_long, , [OBJS="$OBJS ../compat/getopt.o ../compat/getopt1.o"; CFLAGS="-I../compat $CFLAGS"])
-
-  # sprawdzamy ioctld
-
-  AC_ARG_ENABLE(ioctld,
-    [  --enable-ioctld         Compile ioctld (Linux only)])
-
-  if test "x$enable_ioctld" = "xyes"; then 
-    AC_CHECK_HEADERS(linux/kd.h, [
-      CFLAGS="$CFLAGS -DWITH_IOCTLD -DIOCTLD_PATH=\\\"${libexecdir}/ioctld\\\""
-      ioctld="ioctld"
-      install_ioctld="install-ioctld"
-    ])
-  fi
-
-  # Wszystkie testy nale¿y dodawaæ POWY¯EJ testu ioctld, poniewa¿ w przypadku
-  # jego powodzenia zawarto¶æ CFLAGS skutecznie blokuje dzia³anie gcc
-  # odpalanego przez ./configure
-  
-  # ustawiamy opcje
-
-  if test "x$enable_static" = "xno" -o "x$enable_dynamic" = "xyes"; then 
-    lib_shared_default=yes
-    lib_static_default=no
-    lgadu="-lgadu"
-  else
-    OBJS="$OBJS ../lib/libgadu.a"
-    lgadu=""
-    lib_shared_default=no
-    lib_static_default=yes
-  fi
-  ekg="ekg"
-  install_ekg="install-ekg"
-  clean_ekg="clean-ekg"
-  distclean_ekg="distclean-ekg"
-  uninstall_ekg="uninstall-ekg"
+  ])
 fi
+
+# zachowujemy opcje dla libgadu
+
+CFLAGS_LIBGADU="$CFLAGS_LIBGADU $CFLAGS"
+LIBS_LIBGADU="$LIBS_LIBGADU $LIBS"
+
 
 AC_CONFIG_FILES(Makefile lib/Makefile examples/Makefile)
-if test -d src; then
-  AC_CONFIG_FILES(src/Makefile)
-fi
 
 AC_OUTPUT
 
@@ -365,41 +167,4 @@ if test "x$lib_shared_enabled" = "xyes"; then
 else
   echo " - shared libgadu: disabled"
 fi
-
-if test -d src; then
-
-  if test "x$have_openssl" = "xtrue"; then
-    echo " - openssl: enabled"
-  else
-    echo " - openssl: disabled"
-  fi
-
-  if test "x$ui_readline_enabled" = "xyes"; then
-    if test "x$ui_readline_default" = "xyes"; then
-      echo " - ui-readline: enabled (default)"
-    else
-      echo " - ui-readline: enabled"
-    fi
-  else
-    echo " - ui-readline: disabled"
-  fi
-
-  if test "x$ui_ncurses_enabled" = "xyes"; then
-    if test "x$ui_ncurses_default" = "xyes"; then
-      echo " - ui-ncurses: enabled (default)"
-    else
-      echo " - ui-ncurses: enabled"
-    fi
-  else
-    echo " - ui-ncurses: disabled"
-  fi
-fi
-
-echo
-echo "******************************************************************"
-echo "** Uwaga! Zmieniony zosta³ domy¶lny interfejs ekg z readline na **"
-echo "** ncurses. Je¶li z jakiego¶ powodu chcesz u¿ywaæ poprzedniego  **"
-echo "** interfejsu, uruchom ,,./configure --disable-ui-ncurses''     **"
-echo "******************************************************************"
-echo
 
