--- a/config.h.in
+++ b/config.h.in
@@ -6,6 +6,9 @@
 /* Defines if your system has the crypt function */
 #undef HAVE_CRYPT
 
+/* Define if Kadu documentation is installed */
+#undef HAVE_DOC
+
 /* Define to 1 if you have the <fcntl.h> header file. */
 #undef HAVE_FCNTL_H
 
@@ -57,6 +60,9 @@
 
 /* Define to 1 if you have the `select' function. */
 #undef HAVE_SELECT
+
+/* Define if built-in sms application is compiled and installed */
+#undef HAVE_SMS
 
 /* Define to 1 if `stat' has the bug that it succeeds when given the
    zero-length file name argument. */
