--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,16 @@
+# configure.ac for Kadu written by A.Smarzewski
 # Process this file with autoconf to produce a configure script.
+
 AC_INIT([Kadu],[0.3.3])
 AC_COPYRIGHT([configure.ac written by A.Smarzewski])
-AC_REVISION([0.3.3-1])
+AC_REVISION([0.3.3-2])
 AC_PREREQ(2.53)
+
+echo
+echo " ***************************************"
+echo " * Configuring Kadu, please wait . . . *"
+echo " ***************************************"
+echo
 
 AC_CONFIG_SRCDIR([kadu/kadu.cpp])
 AC_CONFIG_AUX_DIR([admin])
@@ -11,6 +19,12 @@ AC_CANONICAL_SYSTEM
 AM_INIT_AUTOMAKE([kadu-0.3.3],[0.3.3])
 
 KDE_SET_PREFIX
+
+########################################################################
+# check for programs, libraries and functions
+########################################################################
+
+CXXFLAGS=-O2
 
 # Checks for programs.
 AC_PROG_CXX
@@ -40,7 +54,90 @@ AC_FUNC_STRFTIME
 AC_FUNC_WAIT3
 AC_CHECK_FUNCS([floor inet_ntoa memset mkdir select strchr strdup strerror strtol])
 
+########################################################################
+# parse configuration options
+########################################################################
+
+MY_SUBDIRS="kadu po varia libgadu"
+
+# doc support
+AC_ARG_ENABLE(doc,[  --disable-doc           do not install Kadu documentation])
+if test -z "$enable_doc"; then
+	enable_doc=yes
+fi
+if test "$enable_doc" = "yes"; then
+	AC_DEFINE(HAVE_DOC,1,[Define if Kadu documentation is installed])
+	MY_SUBDIRS="$MY_SUBDIRS doc"
+fi
+
+# sms support
+AC_ARG_ENABLE(sms,[  --disable-sms           do not compile and install built-in sms application])
+if test -z "$enable_sms"; then
+	enable_sms=yes
+fi
+if test "$enable_sms" = "yes"; then
+	AC_DEFINE(HAVE_SMS,1,[Define if built-in sms application is compiled and installed])
+	MY_SUBDIRS="$MY_SUBDIRS sms"
+fi
+
+# pthread support
+AC_ARG_WITH(pthread,[  --without-pthread       do not use pthread in libgadu resolver])
+if test -z "$with_pthread"; then
+	with_pthread=yes
+	ac_configure_args="$ac_configure_args --with-pthread"
+fi
+
+# debug support
+if test -z "$enable_debug"; then
+	enable_debug=no
+fi
+if test "$enable_debug" = "yes"; then
+	CXXFLAGS="$CXXFLAGS -ggdb"
+else
+	ac_configure_args="$ac_configure_args --disable-debug"
+fi
+
+AC_SUBST(MY_SUBDIRS)
+
+########################################################################
+# configure libgadu and sms application
+########################################################################
+
+echo
+echo " ***************************************************************"
+echo " * Configuring libgadu and sms (if enabled), please wait . . . *"
+echo " ***************************************************************"
+echo
+
+AC_CONFIG_SUBDIRS([libgadu])
+if test "$enable_sms" = "yes"; then
+	AC_CONFIG_SUBDIRS([sms])
+fi
+
+########################################################################
+# finalize configure
+########################################################################
+
 KDE_CREATE_SUBDIRSLIST
+
 AC_CONFIG_FILES([./Makefile kadu/Makefile po/Makefile varia/Makefile])
-AC_CONFIG_SUBDIRS([libgadu sms])
+if test "$enable_doc" = "yes"; then
+	AC_CONFIG_FILES([doc/Makefile])
+fi
 AC_OUTPUT
+
+echo
+echo " **************************************"
+echo " * Kadu configuration is now complete *"
+echo " **************************************"
+echo
+echo " Kadu was configured using options specified below:"
+echo
+echo "    Installation prefix:                          $prefix" 
+echo "    Install Kadu documentation:                   $enable_doc"
+echo "    Compile and install built-in sms application: $enable_sms"
+echo "    Use pthread resolving in libgadu:             $with_pthread"
+echo "    Compile with debug symbols:                   $enable_debug"
+echo
+echo " Run make now (gmake on FreeBSD) to compile Kadu."
+echo
