--- a/libgadu/lib/Makefile.in
+++ b/libgadu/lib/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.11 2002/11/19 00:58:48 chilek Exp $
+# $Id: Makefile.in,v 1.12 2002/11/28 11:07:46 chilek Exp $
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
@@ -55,7 +55,7 @@ $(STATIC): $(OBJS)
 shared:	$(SHARED)
 
 $(SHARED): $(LOBJS)
-	$(CC) -g -shared -Wl,-soname=libgadu.so.$(VERSION_MAJOR) -o $(SHARED) $(LOBJS) $(LIBS) -lc
+	$(CC) -shared -Wl,-soname=libgadu.so.$(VERSION_MAJOR) -o $(SHARED) $(LOBJS) $(LIBS) -lc
 	$(LN_S) -f $(SHARED) $(SHAREDM)
 	$(LN_S) -f $(SHARED) $(SHAREDMM)
 
