dodalem update.cpp/h
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@374 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -28,7 +28,8 @@ userlist.cpp userlist.h \
 vuser.cpp vuser.h \
 dock_widget.cpp dock_widget.h \
 emoticons.cpp emoticons.h \
-status.cpp status.h
+status.cpp status.h \
+updates.cpp updates.h
 
 METASOURCES = AUTO
 
