--- a/libgadu/configure.in
+++ b/libgadu/configure.in
@@ -1,8 +1,8 @@
-dnl $Id: configure.in,v 1.8 2002/11/19 00:58:48 chilek Exp $
+dnl $Id: configure.in,v 1.9 2002/12/16 22:56:53 adrian Exp $
 
 AC_INIT(lib/libgadu.h)
 AC_PREREQ(2.50)
-AC_CONFIG_HEADER(config.h)
+AC_CONFIG_HEADERS(config.h)
 
 AC_PROG_CC
 AC_PROG_CPP
@@ -59,18 +59,38 @@ AC_SUBST(install_ekgwap, "")
 
 AC_SUBST(OBJS, "")
 
+echo "/* Generated automatically by configure. Do not edit. */" > lib/libgadu-config.h
+cat lib/libgadu-config.h.in >> lib/libgadu-config.h
+
+AC_TRY_RUN([
+  int main() {
+  #ifdef WORDS_BIGENDIAN
+    return 0;
+  #else
+    return 1;
+  #endif
+  }
+], [
+  sed 's/#undef __GG_LIBGADU_BIGENDIAN/#define __GG_LIBGADU_BIGENDIAN/' < lib/libgadu-config.h > lib/libgadu-config.h-
+  mv -f lib/libgadu-config.h- lib/libgadu-config.h
+], [
+  sed 's/#undef __GG_LIBGADU_BIGENDIAN.*/\/* & *\//' < lib/libgadu-config.h > lib/libgadu-config.h-
+  mv -f lib/libgadu-config.h- lib/libgadu-config.h
+])
+
 # najpierw sprawdzamy te opcje, które s± wspólne dla libgadu i ekg.
 
 AC_ARG_ENABLE(debug, 
   [  --disable-debug         Compile without debugging symbols and messages])
 
 if test "x$enable_debug" = "xno"; then 
+  CFLAGS=`echo "$CFLAGS" | sed 's/-g//'`
   CFLAGS="$CFLAGS -DGG_DEBUG_DISABLE"
   strip_ekg="strip-ekg"
   strip_ioctld="strip-ioctld"
   strip_libgadu_so="strip-libgadu-so"
 else
-  CFLAGS="$CFLAGS -ggdb" 
+  CFLAGS="$CFLAGS -g" 
 fi
 
 dnl sparc libs...
@@ -131,8 +151,17 @@ if test "x$with_pthread" = "xyes"; then
     AC_CHECK_LIB(pthread, pthread_create, [
       AC_DEFINE(HAVE_PTHREAD, 1, [Define if you want to use pthread in resolver])
       LIBS="$LIBS -lpthread"
+
+      sed 's/#undef __GG_LIBGADU_HAVE_PTHREAD/#define __GG_LIBGADU_HAVE_PTHREAD/' < lib/libgadu-config.h > lib/libgadu-config.h-
+      mv -f lib/libgadu-config.h- lib/libgadu-config.h
+      libgadu_have_pthread=yes
     ])
   ])
+fi
+
+if test "x$libgadu_have_pthread" != "xyes"; then
+  sed 's/#undef __GG_LIBGADU_HAVE_PTHREAD/\/* & *\//' < lib/libgadu-config.h > lib/libgadu-config.h-
+  mv -f lib/libgadu-config.h- lib/libgadu-config.h
 fi
 
 # zachowujemy opcje dla libgadu
@@ -141,7 +170,7 @@ CFLAGS_LIBGADU="$CFLAGS_LIBGADU $CFLAGS"
 LIBS_LIBGADU="$LIBS_LIBGADU $LIBS"
 
 
-AC_CONFIG_FILES(Makefile lib/Makefile examples/Makefile)
+AC_CONFIG_FILES(Makefile lib/Makefile examples/Makefile lib/libgadu.pc)
 
 AC_OUTPUT
 
