--- a/libgadu/lib/Makefile.in
+++ b/libgadu/lib/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.13 2002/12/16 22:54:39 adrian Exp $
+# $Id: Makefile.in,v 1.14 2002/12/26 16:18:40 chilek Exp $
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
