--- a/libgadu/lib/libgadu-config.h.in
+++ b/libgadu/lib/libgadu-config.h.in
@@ -9,4 +9,7 @@
 /* Defined if libgadu was compiled and linked with pthread support. */
 #undef __GG_LIBGADU_HAVE_PTHREAD
 
+/* Defined if this machine has C99-compiliant vsnprintf(). */
+#undef __GG_LIBGADU_HAVE_C99_VSNPRINTF
+
 #endif /* __GG_LIBGADU_CONFIG_H */
