--- a/config.h.in
+++ b/config.h.in
@@ -27,6 +27,9 @@
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
+/* Define to 1 if you have the `crypto' library (-lcrypto). */
+#undef HAVE_LIBCRYPTO
+
 /* Define to 1 if you have the `gadu' library (-lgadu). */
 #undef HAVE_LIBGADU
 
@@ -38,6 +41,9 @@
 
 /* Define if you have a working libpthread (will enable threaded code) */
 #undef HAVE_LIBPTHREAD
+
+/* Define to 1 if you have the `ssl' library (-lssl). */
+#undef HAVE_LIBSSL
 
 /* Define if you have libz */
 #undef HAVE_LIBZ
@@ -56,6 +62,9 @@
 
 /* Define to 1 if you have the <netinet/in.h> header file. */
 #undef HAVE_NETINET_IN_H
+
+/* Define if we have OpenSSL encryption support */
+#undef HAVE_OPENSSL
 
 /* Define to 1 if you have the <pthread/linuxthreads/pthread.h> header file.
    */
