--- a/libgadu/lib/libgadu-config.h.in
+++ b/libgadu/lib/libgadu-config.h.in
@@ -12,4 +12,10 @@
 /* Defined if this machine has C99-compiliant vsnprintf(). */
 #undef __GG_LIBGADU_HAVE_C99_VSNPRINTF
 
+/* Defined if this machine has va_copy(). */
+#undef __GG_LIBGADU_HAVE_VA_COPY
+
+/* Defined if this machine has __va_copy(). */
+#undef __GG_LIBGADU_HAVE___VA_COPY
+
 #endif /* __GG_LIBGADU_CONFIG_H */
