--- a/libgadu/Makefile.in
+++ b/libgadu/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.11 2002/12/26 16:30:59 chilek Exp $
+# $Id: Makefile.in,v 1.12 2003/01/12 22:56:42 chilek Exp $
 
 prefix = @prefix@
 datadir = @datadir@
@@ -30,6 +30,16 @@ examples:
 
 #
 
+dep:	dep-libgadu @dep_ekg@
+
+dep-libgadu:
+	cd lib && $(MAKE) dep
+
+dep-ekg:
+	cd src && $(MAKE) dep
+
+#
+
 configure:	configure.in m4/*
 	./autogen.sh
 
@@ -40,12 +50,13 @@ install:	all install-libgadu @install_ekg@ @install_ekgwap@
 install-libgadu:
 	cd lib && $(MAKE) install
 
-install-ekg:	install-ekg-themes install-ekg-man install-ekgsearch
+install-ekg:	install-ekg-data install-ekg-man install-ekgsearch
 	cd src && $(MAKE) install
 
-install-ekg-themes:
+install-ekg-data:
 	$(INSTALL) -d $(DESTDIR)$(datadir)/ekg/themes
 	$(INSTALL) -m 644 themes/*.theme $(DESTDIR)$(datadir)/ekg/themes
+	$(INSTALL) -m 644 docs/vars.txt $(DESTDIR)$(datadir)/ekg
 
 install-ekg-man:
 	$(INSTALL) -d $(DESTDIR)$(mandir)/man1
