--- a/libgadu/examples/Makefile.in
+++ b/libgadu/examples/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.6 2002/12/16 22:51:50 adrian Exp $
+# $Id: Makefile.in,v 1.7 2003/01/12 22:56:42 chilek Exp $
 
 CC = @CC@
 CFLAGS = @CFLAGS@ -I.. -I../lib -I../src
