--- a/libgadu/lib/Makefile.in
+++ b/libgadu/lib/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.15 2003/01/12 22:56:42 chilek Exp $
+# $Id: Makefile.in,v 1.16 2003/01/15 22:10:32 chilek Exp $
 
 prefix = @prefix@
 exec_prefix = @exec_prefix@
@@ -21,8 +21,8 @@ RANLIB = @RANLIB@
 STRIP = @STRIP@
 LN_S = @LN_S@
 
-OBJS = common.o libgadu.o search.o pubdir.o http.o dcc.o userlist.o events.o search50.o
-LOBJS = common.lo libgadu.lo search.lo pubdir.lo http.lo dcc.lo userlist.lo events.lo search50.lo
+OBJS = common.o libgadu.o search.o pubdir.o http.o dcc.o userlist.o events.o search50.o pubdir50.o
+LOBJS = common.lo libgadu.lo search.lo pubdir.lo http.lo dcc.lo userlist.lo events.lo search50.lo pubdir50.lo
 SRCS = $(OBJS:.o=.c)
 
 SHAREDMM = libgadu.so
