--- a/libgadu/lib/libgadu.pc.in
+++ b/libgadu/lib/libgadu.pc.in
@@ -4,8 +4,8 @@ libdir=@libdir@
 includedir=@includedir@
 
 Name: libgadu
-Version: 20030115: CVS
+Version: 20030201: CVS
 Description: libgadu
 Libs: -L${libdir} -lgadu @LIBS_LIBGADU@
-Cflags: -I${includedir} @CFLAGS_LIBGADU@
+Cflags: -I${includedir}
 
